--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "isharipov/ktemplate",
+    "name": "quasilyte/ktemplate",
     "type": "library",
     "license": "MIT",
     "autoload": {
